--- a/kooplex-hub/web.debug.config
+++ b/kooplex-hub/web.debug.config
@@ -7,7 +7,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
     <!-- The following setting is meant to protect the debugging endpoint against inadvertent access, and should be treated as a password. -->
-    <add key="WSGI_PTVSD_SECRET" value="wdsry31xokd" xdt:Transform="Insert" />
+    <add key="WSGI_PTVSD_SECRET" value="keczlmzhi1t" xdt:Transform="Insert" />
   </appSettings>
   <system.web>
     <!-- Required for websockets. -->
